增加txt转换成csv

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "manifest_version": 2,
   "browser_action": {
+    "default_popup": "./pages/popup.html"
   },
   "background": {
     "persistent": false,
@@ -18,5 +19,8 @@
   },
   "web_accessible_resources": [
     "pages/*"
+  ],
+  "permissions": [
+    "tabs"
   ]
 }
